# TES3MP

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  tes3mp-changelog.md  tes3mp-credits.md
CI/: before_script.linux.sh
apps/browser/: main.cpp
apps/launcher/: maindialog.cpp
apps/openmw/: CMakeLists.txt  engine.cpp  main.cpp
apps/openmw-mp/: CMakeLists.txt  Cell.cpp  Cell.hpp  CellController.cpp  MasterClient.cpp  Networking.cpp  Player.cpp  Utils.cpp  handleInput.cpp  main.cpp
apps/openmw-mp/Script/: Script.cpp  ScriptFunction.cpp  ScriptFunctions.cpp  ScriptFunctions.hpp
apps/openmw-mp/Script/API/: PublicFnAPI.cpp  TimerAPI.cpp
apps/openmw-mp/Script/Functions/: Actors.cpp  Actors.hpp  Cells.cpp  CharClass.cpp  CharClass.hpp  Dialogue.hpp  GUI.hpp  Items.cpp  Items.hpp  Mechanics.cpp  Mechanics.hpp  Miscellaneous.cpp  Objects.cpp  Objects.hpp  Positions.cpp  Quests.hpp  RecordsDynamic.cpp  RecordsDynamic.hpp  Server.hpp  Settings.cpp  Settings.hpp  Shapeshift.cpp  Shapeshift.hpp  Spells.cpp  Spells.hpp  Stats.cpp  Stats.hpp  Timer.cpp  Worldstate.cpp  Worldstate.hpp
apps/openmw-mp/Script/LangLua/: LangLua.cpp  LuaFunc.cpp
apps/openmw-mp/processors/: ProcessorInitializer.cpp
apps/openmw/mwbase/: dialoguemanager.hpp  mechanicsmanager.hpp  windowmanager.hpp  world.hpp
apps/openmw/mwclass/: armor.cpp  container.cpp  container.hpp  creature.cpp  creature.hpp  creaturelevlist.cpp  door.cpp  ingredient.cpp  misc.cpp  npc.cpp  npc.hpp  weapon.cpp
apps/openmw/mwdialogue/: dialoguemanagerimp.cpp  dialoguemanagerimp.hpp  journalimp.hpp
apps/openmw/mwgui/: alchemywindow.cpp  charactercreation.cpp  console.cpp  console.hpp  container.cpp  container.hpp  containeritemmodel.cpp  dialogue.cpp  dialogue.hpp  draganddrop.cpp  hud.cpp  inventorywindow.cpp  jailscreen.cpp  keyboardnavigation.cpp  mainmenu.cpp  mapwindow.cpp  mapwindow.hpp  merchantrepair.cpp  messagebox.cpp  messagebox.hpp  quickkeysmenu.cpp  quickkeysmenu.hpp  race.cpp  settingswindow.cpp  spellbuyingwindow.cpp  spellcreationdialog.cpp  spellwindow.cpp  tradewindow.cpp  trainingwindow.cpp  travelwindow.cpp  waitdialog.cpp  windowmanagerimp.cpp  windowmanagerimp.hpp
apps/openmw/mwinput/: actionmanager.cpp  bindingsmanager.cpp  inputmanagerimp.cpp
apps/openmw/mwmechanics/: activespells.cpp  activespells.hpp  actors.cpp  actors.hpp  aiactivate.cpp  aiactivate.hpp  aicombat.cpp  aifollow.cpp  aifollow.hpp  aipursue.cpp  alchemy.cpp  alchemy.hpp  character.cpp  character.hpp  combat.cpp  creaturestats.cpp  creaturestats.hpp  disease.hpp  enchanting.cpp  mechanicsmanagerimp.cpp  mechanicsmanagerimp.hpp  npcstats.cpp  npcstats.hpp  repair.cpp  security.cpp  spellcasting.cpp  spells.cpp  spells.hpp  summoning.cpp  tickableeffects.cpp
apps/openmw/mwmp/: ActorList.cpp  Cell.cpp  Cell.hpp  CellController.cpp  CellController.hpp  DedicatedActor.cpp  DedicatedActor.hpp  DedicatedPlayer.cpp  DedicatedPlayer.hpp  GUIController.cpp  GUIController.hpp  LocalActor.cpp  LocalActor.hpp  LocalPlayer.cpp  LocalPlayer.hpp  Main.cpp  MechanicsHelper.cpp  MechanicsHelper.hpp  Networking.cpp  ObjectList.cpp  ObjectList.hpp  PlayerList.cpp  PlayerList.hpp  RecordHelper.cpp  RecordHelper.hpp  Worldstate.cpp  Worldstate.hpp
apps/openmw/mwmp/GUI/: GUIChat.cpp  (+1 more)
apps/openmw/mwphysics/: actor.cpp  mtphysics.hpp  physicssystem.cpp  physicssystem.hpp
apps/openmw/mwrender/: globalmap.cpp  weaponanimation.cpp
apps/openmw/mwscript/: aiextensions.cpp  animationextensions.cpp  containerextensions.cpp  controlextensions.cpp  dialogueextensions.cpp  globalscripts.cpp  guiextensions.cpp  interpretercontext.cpp  interpretercontext.hpp  miscextensions.cpp  soundextensions.cpp  statsextensions.cpp  transformationextensions.cpp
apps/openmw/mwstate/: statemanagerimp.cpp
apps/openmw/mwworld/: action.cpp  actionharvest.cpp  actionteleport.cpp  cells.cpp  cells.hpp  cellstore.cpp  cellstore.hpp  class.cpp  class.hpp  containerstore.cpp  containerstore.hpp  datetimemanager.cpp  datetimemanager.hpp  esmstore.hpp  globals.cpp  globals.hpp  inventorystore.cpp  manualref.cpp  player.cpp  projectilemanager.cpp  ptr.hpp  refdata.hpp  scene.cpp  store.cpp  store.hpp  weather.cpp  weather.hpp  worldimp.cpp  worldimp.hpp
cmake/: OpenMWMacros.cmake
components/: CMakeLists.txt
components/crashcatcher/: crashcatcher.hpp  windows_crashcatcher.cpp
components/debug/: debugging.cpp
components/esm/: cellref.cpp  cellref.hpp  loadcell.cpp  loadcell.hpp
components/interpreter/: context.hpp
components/openmw-mp/: NetworkMessages.hpp  TimedLog.cpp  Utils.cpp  Utils.hpp  Version.hpp
components/openmw-mp/Base/: BaseActor.hpp  BaseObject.hpp  BasePlayer.hpp  BaseStructs.hpp  BaseWorldstate.hpp
components/openmw-mp/Controllers/: ObjectPacketController.cpp  PlayerPacketController.cpp
components/openmw-mp/Master/: MasterData.hpp  PacketMasterAnnounce.cpp  PacketMasterQuery.cpp  PacketMasterUpdate.cpp  ProxyMasterPacket.hpp
components/openmw-mp/Packets/: PacketPreInit.hpp
components/openmw-mp/Packets/Actor/: PacketActorAttack.cpp  PacketActorCast.cpp  PacketActorSpellsActive.cpp  PacketActorSpellsActive.hpp
components/openmw-mp/Packets/Object/: ObjectPacket.cpp  PacketClientScriptLocal.cpp  PacketObjectDialogueChoice.cpp  PacketObjectDialogueChoice.hpp  PacketObjectMiscellaneous.cpp  PacketObjectMiscellaneous.hpp  PacketScriptMemberShort.cpp
components/openmw-mp/Packets/Player/: PacketGameSettings.cpp  PacketPlayerAnimFlags.cpp  PacketPlayerAttack.cpp  PacketPlayerBook.cpp  PacketPlayerCast.cpp  PacketPlayerCooldowns.cpp  PacketPlayerCooldowns.hpp  PacketPlayerFaction.cpp  PacketPlayerInventory.cpp  PacketPlayerJournal.cpp  PacketPlayerPosition.cpp  PacketPlayerQuickKeys.cpp  PacketPlayerSpellbook.cpp  PacketPlayerSpellsActive.cpp  PacketPlayerSpellsActive.hpp  PacketPlayerTopic.cpp
components/openmw-mp/Packets/Worldstate/: PacketRecordDynamic.cpp  PacketWorldMap.cpp  PacketWorldRegionAuthority.cpp
components/settings/: settings.cpp  settings.hpp
files/mygui/: CMakeLists.txt
files/tes3mp/: tes3mp-server-default.cfg
(+68 files in other folders)
